--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <!-- <link rel="icon" type="image/png" href="/images/favorite.png"/> -->
   <title>FileShare</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= stylesheet_link_tag "blueprint/screen", :media => "screen, projection" %>
+  <%= stylesheet_link_tag "blueprint/print", :media => "print" %>
+  <%= stylesheet_link_tag "blueprint/grid", :media => "screen, projection" %>
+  <%= stylesheet_link_tag "blueprint/plugins/fancy-type/screen" %>
+  <%= stylesheet_link_tag "blueprint/plugins/silksprite/sprite", :media => "screen, projection" %>
+  <%= stylesheet_link_tag "fullcalendar.css", :media => "screen, projection" %>
+  
+  <!--[if lt IE 8]>
+    <%= stylesheet_link_tag "blueprint/ie", :media => "screen, projection" %>
+  <![endif]-->
+  <%= stylesheet_link_tag "/tablesorter/blue/style", :media => "screen" %>
+  <%= stylesheet_link_tag "smoothness/jquery-ui-1.7.2.custom" %>
+  
+  <% if RAILS_ENV == "production" %>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+  <% else %>
+    <%= javascript_include_tag 'jquery-1.4.2.min' %>
+  <% end %>
+  <%= javascript_include_tag 'jquery.tablesorter.min', 'jquery-ui-1.7.2.custom.min', 'jquery.string.1.0-min', 'jquery.clonePosition',
+        'lowpro.jquery', 'fullcalendar', 'jquery.qtip-1.0.0-rc3', 'behaviors', 'application' %>
+
+  <%= stylesheet_link_tag "formtastic" %>
+  <%= stylesheet_link_tag "formtastic_changes" %>
+
+  <%= stylesheet_link_tag 'error_messages' %>
+  <%= stylesheet_link_tag 'text_and_colors' %>
+  <%= stylesheet_link_tag 'application' %>
+  
   <%= csrf_meta_tag %>
+  
+  <%= yield :javascript %>
 </head>
 <body>
 
-<%= yield %>
+  <div class="container">
+    <div class="top-banner span-24 last">
+      <div class="header span-14">
+        <h1>FileShare</h1>
+      </div>
+    </div>
+
+    <div class="base_content span-20">
+      <%= render :partial => 'shared/flash', :object => flash %>
+      <div class="inner_content">
+        <%= yield %>
+      </div>
+    </div>
+
+    <div class="span-4 last">
+      <div id="main_menu">
+        <ul>
+          <li><%= link_to "Files", root_path %></li>
+        </ul>
+      </div>
+
+      <div class="sidebar">
+        <%= yield :sidebar %>
+      </div>
+
+    </div>
+  </div>
 
 </body>
 </html>
