enable file updates/deletions - has_authorization? always returns true - disable checking for file_attachment.event in edit.html.erb - use rails.js

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <%= javascript_include_tag 'jquery-1.4.2.min' %>
   <% end %>
   <%= javascript_include_tag 'jquery.tablesorter.min', 'jquery-ui-1.7.2.custom.min', 'jquery.string.1.0-min', 'jquery.clonePosition',
-        'lowpro.jquery', 'fullcalendar', 'jquery.qtip-1.0.0-rc3', 'behaviors', 'application' %>
+        'lowpro.jquery', 'fullcalendar', 'jquery.qtip-1.0.0-rc3', 'rails', 'behaviors', 'application' %>
 
   <%= stylesheet_link_tag "formtastic" %>
   <%= stylesheet_link_tag "formtastic_changes" %>
