--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
     <div class="span-4 last">
       <div id="main_menu">
         <ul>
-          <li><%= link_to "Files", root_path %></li>
+          <li><%= link_to "Files", file_attachments_path %></li>
         </ul>
       </div>
 
