make tablsorter path relative

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <!--[if lt IE 8]>
     <%= stylesheet_link_tag "blueprint/ie", :media => "screen, projection" %>
   <![endif]-->
-  <%= stylesheet_link_tag "/tablesorter/blue/style", :media => "screen" %>
+  <%= stylesheet_link_tag "tablesorter/blue/style", :media => "screen" %>
   <%= stylesheet_link_tag "smoothness/jquery-ui-1.7.2.custom" %>
   
   <% if RAILS_ENV == "production" %>
