remove deprecated syntaxes - before_validation_on_create => before_validation :meth, :on => :create - erb output blocks; <% => <%=

--- a/app/views/file_attachments/edit.html.erb
+++ b/app/views/file_attachments/edit.html.erb
@@ -12,9 +12,9 @@
 <% 
 #end
 %>
-<% content_tag :div do %>
-  <% semantic_form_for @file_attachment do |form| %>
-    <% form.inputs do %>
+<%= content_tag :div do %>
+  <%= semantic_form_for @file_attachment do |form| %>
+    <%= form.inputs do %>
       <%= form.input :name, :hint => 'something memorable' %>
       <%= 
       #form.input :event, :hint => 'does this file belong somewhere else?'
