--- a/app/views/file_attachments/_file_attachment.html.erb
+++ b/app/views/file_attachments/_file_attachment.html.erb
@@ -1,10 +1,10 @@
-<% div_for(file_attachment) do %>
+<%= div_for(file_attachment) do %>
   <%= description_display(file_attachment) %>
-  <% content_tag :p do %>
+  <%= content_tag :p do %>
     <%= link_to(file_attachment.name, download_file_attachment_path(file_attachment.id)) %>
   <% end %>
   
-  <% content_tag :p, :style => "font-size: 11px;" do %>
+  <%= content_tag :p, :style => "font-size: 11px;" do %>
     <a href="#" file_attachment_id="<%= file_attachment.id %>" file_attachment[description]="<%= file_attachment.description %>" class="file_attachment_dynamic_form_link fake_button">update description</a>
     <%= link_to('update', edit_file_attachment_path(file_attachment.id), :class => 'fake_button') if has_authorization?(:update, :file_attachments) %>
     <%= link_to('delete', file_attachment_path(file_attachment.id), {
