--- a/app/views/file_attachments/_file_attachment.html.erb
+++ b/app/views/file_attachments/_file_attachment.html.erb
@@ -1,7 +1,7 @@
 <%= div_for(file_attachment) do %>
   <%= description_display(file_attachment) %>
   <%= content_tag :p do %>
-    <%= link_to(file_attachment.name, download_file_attachment_path(file_attachment.id)) %>
+    <%= link_to(file_attachment.name, download_file_attachment_path(file_attachment.id)) %> <%= "(#{link_to(file_attachment.attachable.name, polymorphic_path(file_attachment.attachable))})".html_safe if file_attachment.attachable %>
   <% end %>
   
   <%= content_tag :p, :style => "font-size: 11px;" do %>
