--- a/public/stylesheets/text_and_colors.css
+++ b/public/stylesheets/text_and_colors.css
@@ -1,3 +1,4 @@
+/*
 .red { color: red }
 .blue { color: blue }
 .green { color: green }
@@ -45,3 +46,4 @@ table.tablesorter { width: auto; }
 table.tablesorter tbody td { padding: 4px 12px; }
 table.tablesorter th.header { padding-right: 24px; }
 table.tablesorter thead tr th { font-size: 13px; }
+*/
