--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -1,5 +1,6 @@
 /* v1.0 | 20080212 */
 
+/*
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -31,22 +32,29 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+*/
 
 /* remember to define focus styles! */
+/*
 :focus {
 	outline: 0;
 }
+*/
 
 /* remember to highlight inserts somehow! */
+/*
 ins {
 	text-decoration: none;
 }
 del {
 	text-decoration: line-through;
 }
+*/
 
 /* tables still need 'cellspacing="0"' in the markup */
+/*
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+*/
