--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,3 +1,4 @@
+/*
 body { background-color: #fff; color: #333; }
 
 body, p, ol, ul, td {
@@ -51,4 +52,4 @@ a:hover { color: #fff; background-color:#000; }
   font-size: 12px;
   list-style: square;
 }
-
+*/
