--- a/app/views/file_attachments/_file_container_select.html.erb
+++ b/app/views/file_attachments/_file_container_select.html.erb
@@ -1,9 +1,9 @@
 <select id="file_container_select" name="file_attachment[file_container]">
+  <option value=""></option>
   <% @file_containers.group_by(&:class).each do |klass, file_containers| %>
-    <option value=""></option>
     <optgroup label="<%= klass.to_s.pluralize %>">
       <%= render({
-        :partial => 'file_container_option',
+        :partial => 'file_attachments/file_container_option',
         :collection => file_containers,
         :locals => {
           :selected => selected
