--- a/app/views/file_attachments/_upload_form.html.erb
+++ b/app/views/file_attachments/_upload_form.html.erb
@@ -1,5 +1,5 @@
-<% if defined?(event) && event %>
-  <% new_file_attachment = FileAttachment.new(:event => event) %>
+<% if defined?(container) && container %>
+  <% new_file_attachment = FileAttachment.new(:attachable => container) %>
 <% else %>
   <% new_file_attachment = FileAttachment.new %>
 <% end %>
