--- a/app/views/file_attachments/index.html.erb
+++ b/app/views/file_attachments/index.html.erb
@@ -1,1 +1,4 @@
-<%= render :partial => 'file_attachments/plupload_with_listing', :locals => {:file_attachments => @file_attachments} %>
+<%= render :partial => 'file_attachments/plupload_with_listing', :locals => {
+  :orphans => @orphans,
+  :files => @files
+} %>
