--- a/app/views/file_attachments/_file_attachments.html.erb
+++ b/app/views/file_attachments/_file_attachments.html.erb
@@ -4,7 +4,7 @@
     <h2>Orphaned Files</h2>
     <%= render :partial => 'file_attachments/file_attachment', :collection => orphans %>
   </div>
-  <div id="files" class="span-8 last">
+  <div class="span-8 last">
     <h2>Attached Files</h2>
     <% files.group_by(&:attachable).each do |attachable, attached_files| %>
     <div id="<%= "#{attachable.class}_#{attachable.id}" %>">
@@ -15,7 +15,7 @@
   </div>
   <div style="clear:both;"></div>
   <% else %>
-  <div id="files">
+  <div>
     <% if files.present? || orphans.present? %>
     <%= render :partial => 'file_attachments/file_attachment', :collection => files.present? ? files : orphans %>
     <% end %>
@@ -24,17 +24,28 @@
 </div>
 
 <% if has_authorization?(:update, FileAttachment.new) %>
-<div id="blank_description_form" style="display: none; padding: 5px 0;">
-  <form class="formtastic file_attachment" id="new_description" method="post" action="#">
-    <div style="margin: 0pt; padding: 0pt; display: inline;">
-      <input type="hidden" value="put" name="_method" />
-      <input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token" />
-    </div>
-    <textarea id="file_attachment_description" style="height: 70px; width: 69%" name="file_attachment[description]"></textarea>
-    <br />
-    <input type="submit" value="Update" />
-  </form>
-</div>
+<!-- <div id="blank_description_form" style="display: none; padding: 5px 0;"> -->
+<form id="file_attachment_dynamic_form" class="formtastic" method="post" action="<%= file_attachments_path %>" style="display: none; padding: 5px 0;">
+  <div style="margin: 0pt; padding: 0pt; display: inline;">
+    <input type="hidden" value="put" name="_method" />
+    <input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token" />
+  </div>
+  <input type="text" id="file_attachment_name" name="file_attachment[name]" />
+  <% unless @file_containers.empty? %>
+  <select id="file_attachment_file_container" name="file_attachment[file_container]">
+    <%= render({
+      :partial => 'file_attachments/file_container_select',
+      :locals => {
+        :selected => "#{params[:attachable_type]}_#{params[:attachable_id]}"
+      }
+    }) %>
+  </select>
+  <% end %>
+  <textarea id="file_attachment_description" style="height: 70px; width: 69%" name="file_attachment[description]"></textarea>
+  <br />
+  <input type="submit" value="Update" /> | <a href="#" class="cancel_dynamic_form">Cancel</a>
+</form>
+<!-- </div> -->
 
 <% content_for(:javascript) do %>
 <script type="text/javascript">
@@ -45,15 +56,9 @@ jQuery.ajaxSetup({
 });
 
 jQuery(function($) {
-  $("a.file_attachment_dynamic_form_link").attach(DynamicForm, {
-    formId: 'new_description',
-    formContainer: 'blank_description_form',
-    actionPrefix: '/file_attachments',
-    targetIdName: 'file_attachment_id',
-    targetContentName: 'file_attachment[description]',
-    targetContentType: 'textarea'
+  $('#file_attachments').attach(DynamicForm, {
+    formElement: $('#file_attachment_dynamic_form')
   });
-  $("#new_description").attach(Remote.Form);
 });
 </script>
 <% end %>
