mv FileAttachmentsController#has_authorization? to FileAttachments::ApplicationController
add 3 auth/z checks
- when display hidden span w/ file_container values (used only when updating files)
- when displaying single upload form
- when displaying std edit form

minor clean up of views

--- a/app/views/file_attachments/_file_attachment.html.erb
+++ b/app/views/file_attachments/_file_attachment.html.erb
@@ -1,5 +1,9 @@
 <%= div_for(file_attachment) do %>
-  <span id="file_attachment_<%= file_attachment.id %>_file_container" class="file_attachment_file_container" style="display:none;"><%= file_attachment.file_container %></span>
+  <%= content_tag :span, file_attachment.file_container, {
+    :id => "file_attachment_#{file_attachment.id}_file_container",
+    :class => "file_attachment_file_container",
+    :style => "display:none;"
+  } if has_authorization?(:update, file_attachment) %>
   <%= description_display(file_attachment) %>
   <%= name_display(file_attachment) %>
   <%= content_tag :p, :style => "font-size: 11px;" do %>
