--- a/app/views/file_attachments/edit.html.erb
+++ b/app/views/file_attachments/edit.html.erb
@@ -1,17 +1,7 @@
-<% 
-#if @file_attachment.event_id.nil?
-%>
-<p><%= link_to '< back', file_attachments_path, :class => 'fake_button' %></p>
-<%
-#else
-%>
-<!-- <p><%= 
-#link_to '< back', event_path(@file_attachment.event.id), :class => 'fake_button'
-%>
-</p> -->
-<% 
-#end
-%>
+<%- back_path = @file_attachment.attachable_id.blank? ? 
+  file_attachments_path : polymorphic_path(@file_attachment.attachable_id) -%>
+<p><%= link_to '< back', back_path, :class => 'fake_button' %></p>
+
 <%= content_tag :div do %>
   <%= semantic_form_for @file_attachment do |form| %>
     <%= form.inputs do %>
@@ -22,13 +12,8 @@
           :selected => "#{@file_attachment.attachable_type}_#{@file_attachment.attachable_id}"
         }
       }) %>
-      <%= 
-      #form.input :event, :hint => 'does this file belong somewhere else?'
-      %>
       <%= form.input :description, :hint => "of file contents, purpose, etc" %>
     <% end %>
-    <%= form.buttons do %>
-      <%= form.commit_button%>
-    <% end %>
+    <%= form.buttons %>
   <% end %>
-<% end %>
+<% end if has_authorization?(:update, @file_attachment) %>
