--- a/app/views/file-share-shared/_main_menu.html.erb
+++ b/app/views/file-share-shared/_main_menu.html.erb
@@ -1,3 +1,3 @@
 <ul>
-  <li><%= link_to "Files", file_attachments_path %></li>
+  <li><%= link_to_file_attachments({}, :link_text => "Files") %></li>
 </ul>
