--- a/app/views/file_attachments/_file_attachment.html.erb
+++ b/app/views/file_attachments/_file_attachment.html.erb
@@ -1,20 +1,7 @@
 <%= div_for(file_attachment) do %>
-  <%= content_tag :span, file_attachment.file_container, {
-    :id => "file_attachment_#{file_attachment.id}_file_container",
-    :class => "file_attachment_file_container",
-    :style => "display:none;"
-  } if has_authorization?(:update, file_attachment) %>
+  <%= file_container_data(file_attachment) %>
   <%= description_display(file_attachment) %>
   <%= name_display(file_attachment) %>
-  <%= content_tag :p, :style => "font-size: 11px;" do %>
-    <%= link_to "update", edit_file_attachment_path(file_attachment), {
-      :class => 'file_attachment_dynamic_form_link fake_button'
-    } %>
-    <%= link_to('delete', file_attachment_path(file_attachment.id), {
-          :method => :delete,
-          :confirm => "Did you mean to Delete #{file_attachment.name}?",
-          :class => 'fake_button'
-        }) if has_authorization?(:delete, file_attachment) %>
-  <% end if has_authorization?(:update, file_attachment) || has_authorization?(:delete, file_attachment) %>
+  <%= links_to_edit_and_delete_file_attachment(file_attachment) %>
 <% end %>  
 <hr />
