move Downloadable heading to _file_attachments

--- a/app/views/file_attachments/_file_attachments.html.erb
+++ b/app/views/file_attachments/_file_attachments.html.erb
@@ -1,3 +1,4 @@
+<h2>Downloadable Resources</h2>
 <div id="file_attachments">
   <% if orphans.present? && files.present? %>
   <div id="orphans" class="span-8">
